# TRT-Engine

./: .gitignore  CMakeLists.txt
include/: common.h  config_parser.h  engine.h
include/model/: model_utils.h
include/utils/: string_utils.h
src/: config_parser.cpp  engine.cpp  main.cpp  plugin_factory.cpp
src/model/: model_utils.cpp
src/utils/: string_utils.cpp
